# dxtb

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CITATION.bib  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  ReadMe.md  devenv.sh  environment.yaml  environment.yml  plan.md  pyproject.toml  requirements.yml  setup.cfg  setup.py  timing.sh  tox.ini
.github/workflows/: codeql.yaml  macos-arm.yaml  macos-x86.yaml  release.yaml  test.yml  ubuntu-nolibcint.yaml  ubuntu-pytorch-1.yaml  ubuntu.yaml  ubuntu.yml  windows.yaml
TMP_BKP/: test_param_optimizer.py
data/: features.json  reactions.json  reactions_small.json
data/GMTKN55/: reactions_ACONF.json  samples_ACONF.json
data/PTB/: samples_HE.json
data/scripts/: build-energy.py  full.sh  grad.py  run.sh
docs/: Makefile  conf.py  extending.rst  make.bat  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
examples/: autograd.py  batch-1.py  batch-2.py  batch-vs-seq.py  batch.py  cuda.py  d4.py  dipole.py  dmudr.py  dpoldr.py  forces.py  hamiltonian.py  hessian.py  hyperpol.py  importing.py  integrals.py  ir.ipynb  ir.py  limitation_xitorch.py  overlap.ipynb  pol.py  quad.py  raman.ipynb  raman.py  readme.py  repulsion.ipynb  run-all.sh  singlepoint.ipynb  spinpol.py  taxol.py  test.py  vib.ipynb  vib.py
examples/issues/: README.md
examples/molecules/: 8-hydroxyquinoline.xyz  aconf20.xyz  capsaicin.xyz  ee-deriv.xyz  ethylacetate.coord  h2o-dimer.coord  hydroxy-ethylacetate.xyz  lih.xyz  nh3-planar.xyz  nicotine.xyz  norcamphor.xyz  nylon.xyz  penicillin.xyz  sh3.coord  taxol.coord  vancoh2.coord  vanillin.xyz
examples/optim/: param.py
examples/profiling/: batch-vs-seq-aconfl.py  batch-vs-seq-nicotine.py  batch.py  dispersion.py  importing.py  move-device.py
figs/: notes_graph_computation.drawio
misc/: test_autograd.py
models/: 202205041943_df.csv  202205041943_eval.txt  202205050222_df.csv  202205050222_eval.txt  202205171935_df.csv  202205171935_eval.txt
param/: gfn1-xtb-hh-nh.toml
src/: basis.py  debug_ram.py  exceptions.py  gfn1-xtb_pconf_20_0.05.toml  gfn1-xtb_tmp.toml  ortho.py  overlap.py  parametrise_heatmap.py  parametrise_multiprocess.py  question_minimal_autograd_example.py  slater.py  test_autograd.py  trafo.py
src/basis/: ortho.py  slater.py
src/data/: covrad.py
src/dxtb/: __init__.py  __main__.py  __version.py  __version__.py  _types.py  bond.py  calculators.py  charges.py  config.py  labels.py  typing.py
src/exlibs/: tblite.py
src/integral/: multipole.py  overlap.py  trafo.py
src/ncoord/: gfn.py  ncoord.py  type.py
src/xtb/: h0.py  spec.py
src/xtbml/: __init__.py  __main__.py  __version.py  adjlist.py  bond.py  charges.py  cutoff.py  exceptions.py  typing.py
test/: conftest.py  molecules.py  run_tests.py  test_cgto_ortho.py  test_param.py  test_slater_expansion.py  utils.py
test/samples/: __init__.py  amino20x4.py  mb16_43.py  types.py
test/test_a_memory_leak/: __init__.py  test_higher_deriv.py  test_repulsion.py  test_scf.py  util.py
test/test_basis/: test_export.py  test_general.py  test_normalization.py  test_orthogonalize.py  test_setup.py
test/test_bond/: samples.py  test_bond.py
test/test_calculator/: test_dd.py  test_energy.py  test_general.py
test/test_charges/: samples.py  test_charges.py  test_general.py  test_grad.py
test/test_classical/: test_list.py
test/test_cli/: test_args.py  test_driver.py  test_entrypoint.py
test/test_components/: __init__.py  test_cache.py  test_list.py
test/test_config/: test_exlibs_available.py  test_export.py  test_integral.py  test_main.py
test/test_coulomb/: samples.py  test_aes2.py  test_aes2_general.py  test_average.py  test_es2.py  test_es2_atom.py  test_es2_general.py  test_es2_shell.py  test_es3.py  test_es3_atom.py  test_es3_general.py  test_es3_shell.py  test_grad_atom.py  test_grad_atom_param.py  test_grad_atom_pos.py  test_grad_param.py  test_grad_shell.py  test_grad_shell_param.py  test_grad_shell_pos.py
test/test_coulomb_charge/: samples.py  test_coulomb.py  test_es2.py  test_es2_atom.py  test_es2_shell.py  test_es3.py  test_grad.py  test_grad_atom.py  test_grad_shell.py
test/test_data/: test_dataloader.py  test_dataset.py  test_geometry.py  test_geometry_handler.py
test/test_dipole/: test_integral.py
test/test_dispersion/: samples.py  test_d3.py  test_d4.py  test_dispersion.py  test_energy.py  test_general.py  test_grad.py  test_grad_general.py  test_grad_param.py  test_grad_pos.py  test_gradient.py  test_hess.py
test/test_external/: samples.py  test_field.py  test_general.py
test/test_fock/: test_grad_pos.py
test/test_halogen/: samples.py  test_energy.py  test_general.py  test_grad.py  test_grad_general.py  test_grad_param.py  test_grad_pos.py  test_halogen.py  test_hess.py
test/test_hamiltonian/: grad.npz  grad_no_overlap.npz  gradients.py  h0.npz  sample_h0.py  sample_overlap.py  samples.py  samples_charged.py  skip_test_grad.py  test_base.py  test_general.py  test_gfn2.py  test_grad.py  test_grad_pos.py  test_h0.py  test_h0_data.py  test_h0_new.py  test_indexhelper.py  test_matrixhelper.py  test_scf.py  test_scf_charged.py  test_scf_elements.py
test/test_indexhelper/: test_culling.py  test_extra.py  test_general.py  test_spread_reduce.py
test/test_integrals/: samples.py  test_driver.py  test_factory.py  test_general.py  test_libcint.py  test_pytorch.py  test_types.py  test_wrappers.py  utils.py
test/test_interaction/: samples.py  test_base.py  test_cache.py  test_grad.py  test_list.py  test_potential.py
test/test_io/: test_fail.py  test_logging.py  test_outer.py  test_outputs.py  test_read.py
test/test_libcint/: test_coeff_grad.py  test_grad_pos.py  test_gradcheck.py  test_multipole.py  test_overlap.py  test_overlap_grad.py  test_shape.py  test_symmetry.py  todo_test_dipole_grad.py
test/test_ml/: gmtkn55.py  test_loss.py  test_simplenet.py  test_transforms.py
test/test_mol/: samples.py  test_external.py  test_general.py  test_mol.py
test/test_multipole/: test_dipole_grad.py  test_dipole_integral.py  test_shape.py  (+2 more)
(+1197 files in other folders)
