[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
markers = [
  "grad: Marks tests which perform 'gradcheck' evaluations, this can be slow.",
  "large: Marks tests for large molecules, this can be slow.",
]
