# This file is part of dxtb.
#
# SPDX-Identifier: Apache-2.0
# Copyright (C) 2024 Grimme Group
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["test"]
pythonpath = ["src"]
markers = [
  "grad: Marks tests which perform 'gradcheck' evaluations, this can be slow.",
  "large: Marks tests for large molecules, this can be slow.",
]


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ["./src/dxtb/exlibs/*"]


[tool.coverage.run]
plugins = ["covdefaults"]
source = ["./src"]
omit = [
  "./src/dxtb/_src/exlibs/xitorch/*",
  "./src/dxtb/_src/typing.py",
  "./src/dxtb/components/*",
]

[tool.coverage.report]
fail_under = 80


[tool.isort]
skip = ["./src/dxtb/__init__.py",]
