[metadata]
name = dxtb
version = attr: dxtb.__version__.__version__
description = Fully Differentiable Approach to Extended Tight Binding
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/grimme-lab/dxtb
author = "Sebastian Ehlert, Marvin Friede, Christian Hölzer"
license = Apache-2.0
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Chemistry
    Typing :: Typed
keywords =
    pytorch
    autograd
    tight-binding
    xtb
    computational chemistry
    quantum chemistry
project_urls =
    Documentation = https://github.com/grimme-lab/dxtb
    Tracker = https://github.com/grimme-lab/dxtb/issues
    Source Code = https://github.com/grimme-lab/dxtb

[options]
packages = find:
install_requires =
    opt-einsum
    pydantic>=2.0.0
    scipy
    tad-dftd3>=0.1.4
    tad-dftd4>=0.0.4
    tad-libcint
    tad-mctc
    tad-multicharge
    tomli
    torch>=1.11
    typing-extensions
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dxtb = dxtb.cli:console_entry_point

[options.extras_require]
dev =
    black
    covdefaults
    mypy
    pre-commit
    pylint
    pyscf
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist
    tox
tox =
    covdefaults
    pyscf
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist

[options.package_data]
dxtb =
    py.typed
    **/*.npy
    **/*.npz
    **/*.toml
