[metadata]
name = dxtb
version = attr: dxtb.__version__.__version__
description = Fully Differentiable Approach to Extended Tight Binding
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/grimme-lab/dxtb
author = "Sebastian Ehlert, Marvin Friede, Christian Hölzer"
license = Apache-2.0
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Chemistry
    Typing :: Typed
keywords =
    pytorch
    autograd
    tight-binding
    xtb
    computational chemistry
    quantum chemistry
    machine learning
project_urls =
    Documentation = https://github.com/grimme-lab/dxtb
    Tracker = https://github.com/grimme-lab/dxtb/issues
    Source Code = https://github.com/grimme-lab/dxtb

[options]
packages = find:
install_requires =
    pydantic>=2.0.0
    scipy
    tad-dftd3>=0.2.2
    tad-dftd4>=0.1.0
    tad-libcint>=0.0.1
    tad-mctc>=0.1.5
    tad-multicharge
    tomli
    torch>=1.11.0,<=2.2.2
    typing-extensions
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dxtb = dxtb._src.cli:console_entry_point

[options.extras_require]
dev =
    black
    covdefaults
    mypy
    pre-commit
    pylint
    pyscf
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist
    tox
tox =
    covdefaults
    pyscf
    pytest
    pytest-cov
    pytest-random-order
    pytest-xdist

[options.package_data]
dxtb =
    py.typed
    **/*.npy
    **/*.npz
    **/*.toml
